<resources>
    <string name="app_name">Explore Counties</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="area">Area -</string>
    <string name="population">Population -</string>
    <string name="continents">Continents -</string>
    <string name="startofweek">StartOfWeek -</string>
    <string name="ukraine">Ukraine</string>
    <string name="kyiv">Kyiv</string>
    <string name="flag">Flag</string>
</resources>